# invoicegen

./: .env.local.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  vercel.json
api/: requirements.txt  server.py
app/: globals.css  icon.tsx  layout.tsx  manifest.ts
app/create/: page.tsx
app/preview/: page.tsx
app/saved/: page.tsx
backend/: __init__.py  requirements.txt  server.py
components/: DateField.tsx  FormInput.tsx  FormSection.tsx  ProductPicker.tsx  TopNav.tsx
lib/: api.ts  apiPayload.ts  date.ts  invoice.ts  invoiceSequence.ts  newId.ts  products.ts
